<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml"
    app:startDestination="@id/navigation_main">

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.animeez.fragments.MainFragment"
        android:label="@string/Main"
        tools:layout="@layout/fragment_main"/>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.animeez.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.animeez.fragments.LogInFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/navigation_signup"
        android:name="com.animeez.fragments.SignUpFragment"
        android:label="fragment_signup"
        tools:layout="@layout/fragment_signup" />
    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.animeez.fragments.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />
</navigation>