<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.animeez.fragments.MainFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/mainFragment_tv_hey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/hey"
        app:layout_constraintStart_toEndOf="@+id/floatingActionButton"
        app:layout_constraintTop_toTopOf="@+id/floatingActionButton" />

    <TextView
        android:id="@+id/mainFragment_tv_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton"
        app:layout_constraintStart_toStartOf="@+id/mainFragment_tv_hey"
        app:layout_constraintTop_toBottomOf="@+id/mainFragment_tv_hey" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainFragment_rv_airing_schedule"
        android:layout_width="0dp"
        android:layout_height="115dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        tools:listitem="@layout/show_item">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainFragment_rv_random_anime"
        android:layout_width="0dp"
        android:layout_height="115dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainFragment_rv_airing_schedule"
        tools:listitem="@layout/show_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:contentDescription="@string/profile"
        android:focusable="true"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mainFragment_rvTitle_airing_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/airing_schedule"
        app:layout_constraintBottom_toTopOf="@+id/mainFragment_rv_airing_schedule"
        app:layout_constraintStart_toStartOf="@+id/mainFragment_rv_airing_schedule" />

    <TextView
        android:id="@+id/mainFragment_tvTitle_randomAnime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/random_anime"
        app:layout_constraintBottom_toTopOf="@+id/mainFragment_rv_random_anime"
        app:layout_constraintStart_toStartOf="@+id/mainFragment_rv_random_anime" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainFragment_rv_magazines"
        android:layout_width="0dp"
        android:layout_height="115dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainFragment_rv_random_anime"
        tools:listitem="@layout/show_item" />

    <TextView
        android:id="@+id/mainFragment_rvTitle_magazines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Magazines"
        app:layout_constraintBottom_toTopOf="@+id/mainFragment_rv_magazines"
        app:layout_constraintStart_toStartOf="@+id/mainFragment_rv_magazines" />


</androidx.constraintlayout.widget.ConstraintLayout>